--- a/products/identity-personalization/profile/notification-preferences/discovery-and-research/usability-study-add-email-jan-2023/session-notes/p1.md
+++ b/products/identity-personalization/profile/notification-preferences/discovery-and-research/usability-study-add-email-jan-2023/session-notes/p1.md
@@ -1,4 +1,11 @@
-# **Conversation guide for Authenticated Experience, Profile Notification Settings, Adding email as a channel**
+# Profile Notification Settings, Adding email as a channel
+
+P1
+
+1/19/2023
+
+Notetaker: SH, Perigean
+
 
 **Moderator logistics**
 
