--- a/teams/vsa/teams/disability-experience/README
+++ b/teams/vsa/teams/disability-experience/README
@@ -1,25 +1,27 @@
-#Benefits Disability Experience Team
+# Benefits Disability Experience Team
+
 Last Updated - 02/06/2023
 
-Where to find us
+## Where to find us
 GitHub Label: disability-experience
 Slack channel: #benefits-disability-experience
 Zenhub board: https://app.zenhub.com/workspaces/disability-experience-63dbdb0a401c4400119d3a44/board
 
-General team overview
+## General team overview
 
-Team charter
+## Team charter
 
-Product outline
+## Product outline
 
-Team
-Name	Role	Email
-Matt Self OCTO PO matthew.self2@va.gov / matthewself.dsva@gmail.com
-Rakshinda Aslam  Product Manager rakshinda.aslam@agile6.com
-Lydia Hooper UX Researcher and Designer lydia.hooper@agile6.com
-Nyantee Asherman UX Researcher and Designer nyantee@cityfriends.tech
-Aurora Hampton Engineer aurora.hampton@agile6.com
-Cole Voss Engineer cole@verdance.co
-Eddie Glenn Engineer eddieglenn@navapbc.com
+## Team
+|Name|Role|Email|
+|----|----|-----|
+| Matt Self | OCTO PO | matthew.self2@va.gov / matthewself.dsva@gmail.com |
+| Rakshinda Aslam | Product Manager | rakshinda.aslam@agile6.com |
+| Lydia Hooper | UX Researcher and Designer | lydia.hooper@agile6.com |
+| Nyantee Asherman | UX Researcher and Designer | nyantee@cityfriends.tech |
+| Aurora Hampton | Engineer | aurora.hampton@agile6.com |
+| Cole Voss | Engineer | cole@verdance.co |
+| Eddie Glenn | Engineer | eddieglenn@navapbc.com |
 
-Roadmaps
+## Roadmaps
