--- a/teams/vsa/teams/disability-experience/README
+++ b/teams/vsa/teams/disability-experience/README
@@ -5,11 +5,14 @@ Last Updated - 02/06/2023
 ## Where to find us
 GitHub Label: disability-experience
 Slack channel: #benefits-disability-experience
+Product repo: va.gov-team/tree/master/products/disability/526ez
+Teams repo: va.gov-team/edit/master/teams/vsa/teams/disability-experience/
 Zenhub board: https://app.zenhub.com/workspaces/disability-experience-63dbdb0a401c4400119d3a44/board
 
 ## General team overview
 
 ## Team charter
+At the highest level, the core disability experience team is here to own, from the ground up, the online submission experience for Veteran disability compensation claims and to make that experience as fast and easy as possible to complete, while ensuring submissions are timely, accurate, and in a state that allow VSR and RVSRS (the people who review and rate claims) to rate them quickly and easily!
 
 ## Team
 |Name|Role|Email|
@@ -21,7 +24,6 @@ Zenhub board: https://app.zenhub.com/workspaces/disability-experience-63dbdb0a40
 | Aurora Hampton | Engineer | aurora.hampton@agile6.com |
 | Cole Voss | Engineer | cole@verdance.co |
 | Eddie Glenn | Engineer | eddieglenn@navapbc.com |
-
 
 ## Product outline
 
