--- a/products/health-care/application/va-application/research/2023-01-Baseline Task Research/research-notes/P12-020823-JS-notes.md
+++ b/products/health-care/application/va-application/research/2023-01-Baseline Task Research/research-notes/P12-020823-JS-notes.md
@@ -42,13 +42,6 @@
 - (completes first page quietly, scrolls through/continue on following pages)
 
 
-
-### Things to watch for:
-- [Does the participant click on the sign in link on this page?]
-- [Does the participant comment on the first 4 following pages and that they show the same questions with info prefilled if they go the non-sign in route?]
-- [If the participant comments on this, is it positive or negative?]
-
-
 ---
 [Step 1 of 6: Veteran information]
 
@@ -64,15 +57,13 @@
 - Right now VA is not a top priority for me, if I was retired or using the VA, might be more inclinded to get to it right away
 - The email is an option to get to it later
 
-
-**Participant questions:**
-- What worked well for you?
-- What was unclear or didn’t work well for you?
-- What would you like to change or add?
-
-### Things to watch for:
-- [Does the participant comment on the length of this section of the form, number of questions/page or the progress bar?]
-- [New American Indian question]
+#### Observer rating of task completion
+- [Observer ratings of start application task completion using rating criteria]
+- 0 = No part of the task completed, much difficulty
+- 1 = Partial completion, much overlooked or task was difficult 
+- 2 = Partial completion, some areas were overlooked or task was slightly difficult
+- [3] = Most of the task was completed with little difficulty
+- 4 = All parts of the task were completed with no difficulty 
 
 ---
 [Step 2 of 6: VA benefits]
@@ -83,21 +74,11 @@
 - That is in the back of my mind, it is a simple yes or no questions in the moment I may have complicated it in my head. Percentages
 - I don't receive any compensation
 - The explanation of monthly payments
-- (( check recording)
 - It would have decluttered the screen a bit
 - to me this asks the same question, just in a different way
 - I don't know the difference between compensation and pension, but I know it doesn't apply to me
 - A drop down menu to declutter the screen, make it faster a little easier
 - (context on page) Absolutley. Maybe not first thing, but have that information available for sure. 
-
-
-### Things to watch for:
-- [Does the participant understand the questions and content through these sections?]
-- [Does the participant comment that the questions are too intrusive?]
-- [Does the participant select a disability rating that results in the short form flow?]
-- [Does the particpant select an option that results in the VA pension question page?]
-
-
 
 ---
 [Step 3 of 6: Military service]
@@ -115,10 +96,6 @@
 
 
 
-### Things to watch for:
-- [Does the participant understand the questions and content through these sections?]
-- [Does the participant comment that the questions are too intrusive or the VA should have this information?]
-
 
 ## Task: [Upload a file] - 3 minutes
 **Quotes, notes and observations:**
@@ -134,9 +111,13 @@
 - It just depends. 
 
 
-### Things to watch for:
-- [Does the participant understand the use of upload file/document?]
-- [Does the participant enter a discharge date that is in the future or that was very recent?]
+#### Observer rating of task completion
+- [Observer ratings of start application task completion using rating criteria]
+- 0 = No part of the task completed, much difficulty
+- 1 = Partial completion, much overlooked or task was difficult 
+- [2] = Partial completion, some areas were overlooked or task was slightly difficult
+- 3 = Most of the task was completed with little difficulty
+- 4 = All parts of the task were completed with no difficulty 
 
 
 ---
@@ -155,20 +136,13 @@
 
 _later goes back and instructed to answer yes
 
-**Participant questions:**
-- What worked well for you?
-- What was unclear or didn’t work well for you?
-- What would you like to change or add?
-
-
-### Things to watch for:
-- [Does the participant understand the financial disclosure page?]
-- [Does the participant open the additional info on qualifying eligibility factors?]
-- [Does the participant click yes or no on the financial disclosure page and express why?] 
-
 #### Observer rating of task completion
 - [Observer ratings of start application task completion using rating criteria]
-
+- [0] = No part of the task completed, much difficulty
+- 1 = Partial completion, much overlooked or task was difficult 
+- 2 = Partial completion, some areas were overlooked or task was slightly difficult
+- 3 = Most of the task was completed with little difficulty
+- 4 = All parts of the task were completed with no difficulty 
 
 
 ## Task: Marital status and spouse information - 3 minutes
@@ -180,14 +154,13 @@ _later goes back and instructed to answer yes
 
 _completes spouse information page
 
-### Things to watch for:
-- [Does the participant make any comments about this page happening after the financial disclosure page?]
-- [Does the participant comment on or interact with the additional info component - "why we ask this information"?]
-- [Does the participant comment on the second spouse page with the two lived with/address questions?]
-- [Does the participant comment the question is intrusive or that they would skip and/or answer untruthfully?]
-
 #### Observer rating of task completion
 - [Observer ratings of start application task completion using rating criteria]
+- 0 = No part of the task completed, much difficulty
+- 1 = Partial completion, much overlooked or task was difficult 
+- 2 = Partial completion, some areas were overlooked or task was slightly difficult
+- [3] = Most of the task was completed with little difficulty
+- 4 = All parts of the task were completed with no difficulty 
 
 
 ## Task: Adding dependents - 5 minutes
@@ -203,18 +176,13 @@ _second round
 - Yep, same
 
 
-**Participant questions:**
-- What worked well for you?
-- What was unclear or didn’t work well for you?
-- What would you like to change or add?
-
-### Things to watch for:
-- [Does the participant need to use the additional info of "Who does VA consider a dependent" to answer the question?]
-- [Does the participant struggle with adding a second dependent?]
-- [Does the participant pause or are they confused by any of the dependent information questions?]
-
 #### Observer rating of task completion
 - [Observer ratings of start application task completion using rating criteria]
+- 0 = No part of the task completed, much difficulty
+- 1 = Partial completion, much overlooked or task was difficult 
+- [2] = Partial completion, some areas were overlooked or task was slightly difficult
+- 3 = Most of the task was completed with little difficulty
+- 4 = All parts of the task were completed with no difficulty 
 
 
 ## Task: Editing and removing a dependent - 3 minutes
@@ -222,13 +190,13 @@ _second round
 - (able to edit)
 - No, not at all. Just that one tiny thing about when they bacame your dependent box. 
 
-
-### Things to watch for:
-- [Does the participant clearly see the buttons to edit and delete dependents?]
-- [Does the participant easily make their edit and continue on without getting hung-up?]
-
 #### Observer rating of task completion
 - [Observer ratings of start application task completion using rating criteria]
+- 0 = No part of the task completed, much difficulty
+- 1 = Partial completion, much overlooked or task was difficult 
+- 2 = Partial completion, some areas were overlooked or task was slightly difficult
+- 3 = Most of the task was completed with little difficulty
+- [4] = All parts of the task were completed with no difficulty 
 
 
 ## Task: Annual Income - 5 minutes
@@ -241,18 +209,13 @@ _second round
 - Same thing as the previous ones, if there was a menu, drop down to get to that information it would clear up the screen some.
 - 
 
-**Participant questions:**
-- What worked well for you?
-- What was unclear or didn’t work well for you?
-- What would you like to change or add?
-
-
-### Things to watch for:
-- [Does the participant comment on the onboarding page or do they spend a lot of time here?]
-- [Does the participant interact with any of the additional information components for more context needed?]
-
 #### Observer rating of task completion
 - [Observer ratings of start application task completion using rating criteria]
+- 0 = No part of the task completed, much difficulty
+- 1 = Partial completion, much overlooked or task was difficult 
+- 2 = Partial completion, some areas were overlooked or task was slightly difficult
+- [3] = Most of the task was completed with little difficulty
+- 4 = All parts of the task were completed with no difficulty 
 
 
 ## Task: Deductible information - 5 minutes
@@ -280,6 +243,13 @@ _second round
 - ... Security reasons (check recording)
 - Trying to get away from doing that (SSN)
 
+#### Observer rating of task completion
+- [Observer ratings of start application task completion using rating criteria]
+- 0 = No part of the task completed, much difficulty
+- 1 = Partial completion, much overlooked or task was difficult 
+- 2 = Partial completion, some areas were overlooked or task was slightly difficult
+- [3] = Most of the task was completed with little difficulty
+- 4 = All parts of the task were completed with no difficulty 
 
 
 [VA Facilities page]
@@ -289,10 +259,13 @@ _second round
 - Me never have been to a VA clinic, that is what I would think
 
 
-
 #### Observer rating of task completion
 - [Observer ratings of start application task completion using rating criteria]
-
+- 0 = No part of the task completed, much difficulty
+- 1 = Partial completion, much overlooked or task was difficult 
+- 2 = Partial completion, some areas were overlooked or task was slightly difficult
+- [3] = Most of the task was completed with little difficulty
+- 4 = All parts of the task were completed with no difficulty 
 
 ---
 [Step 6 of 6: Review]
@@ -302,6 +275,14 @@ _second round
 - Before.. to complete I would submit it
 - I would click the plus button, show all answers for that category, read over it to verify
 - Then click Submit
+
+#### Observer rating of task completion
+- [Observer ratings of start application task completion using rating criteria]
+- 0 = No part of the task completed, much difficulty
+- 1 = Partial completion, much overlooked or task was difficult 
+- 2 = Partial completion, some areas were overlooked or task was slightly difficult
+- 3 = Most of the task was completed with little difficulty
+- [4] = All parts of the task were completed with no difficulty 
 
 
 **Participant questions:**
@@ -321,21 +302,23 @@ _second round
 - nothing that would prevent me to hitting submit
 
 
-### Things to watch for:
-- [Does the participant have a positive or negative sentiment about the review page?]
-- [Does the participant give any reason for pause or why they wouldn's submit the application?]
-- [Does the participant interact with any of the accordions or try and edit any information?]
-
-
 ---
 ## Task: Confirmation Page - 3 minutes
 **Quotes, notes and observations:**
 - I appreciate this portion of it - How can I check the status
 - Sometime you hit the button and there is just a screen "Thank you"
 - Maybe burried in the email, what is next
-- This is already telling me what I can do to c
+- This is already telling me what I can do to 
 - One thing i realize that you don't have, which I appriciate, You are not forcing me to take a survey.
 - Like most people, I just go past it. If I have a problem I would let you know. 
+
+#### Observer rating of task completion
+- [Observer ratings of start application task completion using rating criteria]
+- 0 = No part of the task completed, much difficulty
+- 1 = Partial completion, much overlooked or task was difficult 
+- 2 = Partial completion, some areas were overlooked or task was slightly difficult
+- 3 = Most of the task was completed with little difficulty
+- [4] = All parts of the task were completed with no difficulty 
 
 
 ## Post-Task Interview - 5 minutes
