--- a/products/health-care/appointments/va-online-scheduling/team/retro/retros-2021-22-23.md
+++ b/products/health-care/appointments/va-online-scheduling/team/retro/retros-2021-22-23.md
@@ -1,6 +1,14 @@
 # VAOS Retros
 
 <details>
+<summary>February 21, 2023</summary>
+
+ <img width="1399" alt="Screenshot 2023-02-24 at 4 20 16 PM" src="https://user-images.githubusercontent.com/90797205/221295323-e3936cd1-40b1-467d-bed2-772d49ccd85f.png">
+
+
+</details>
+
+<details>
 <summary>February 7, 2023</summary>
 
  <img width="1392" alt="Screen Shot 2023-02-07 at 4 25 22 PM" src="https://user-images.githubusercontent.com/97117349/217841484-3bca791d-a154-4f7c-8314-0699664a75b1.png">
